assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');

@font-face {
    font-family: waltograph;
    src: url(../fonts/waltograph42.otf);
    font-display: swap;
}

* {
    box-sizing: border-box;
    font-family: 'lora', sans-serif;
}

body {
    margin: 0;
    font-size: 100%;
    text-align: center;
    position: relative;
    z-index: 1;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.background {
    background-image: url(../media/background/cinema-tile.webp);
    background-repeat: repeat;
    background-attachment: fixed;
    background-size: 200px 200px;
    filter: grayscale(100%);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
}

.background::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.96;
    background-color: white;
    z-index: -1;
}

#main {
    max-width: 1000px;
    margin: 0 auto;
    padding: 0 10px;
    display: flex;
    align-items: center;
    flex-direction: column;
    z-index: 1;
    position: relative;
}

h1 {
    position: relative;
    color: #D8321C;
    margin: 2px auto;
    font-size: 4.5em;
    font-family: waltograph, sans-serif;
    letter-spacing: 0.05em;
    text-shadow: 0 0 10px #FFF, 0 0 10px #FFF, 0 0 10px #FFF, 0 0 10px #FFF;
}

h2 {
    font-size: 2em;
    text-shadow: 0 0 10px #FFF, 0 0 10px #FFF, 0 0 10px #FFF, 0 0 10px #FFF;
}

p {
    font-size: 1.3em;
    max-width: 1000px;
    margin: auto;
    padding-bottom: 10px;
    text-shadow: 0 0 5px #FFF, 0 0 5px #FFF, 0 0 5px #FFF, 0 0 5px #FFF;
}

button {
    all: unset;
    font-size: 1.5em;
    margin: 10px;
    padding: 15px;
    border: black solid 2px;
    border-radius: 5px;
    transition: background-color 0.5s ease;
    background-color: #FFF;
}

.hover:hover, #start-game:hover {
    background-color: rgb(82, 196, 190);
}

button:focus-visible {
    border: rgb(218, 67, 7) dashed 2px;
}

#answer-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

#answer-container button {
    display: block;
}

footer {
    margin-top: auto;
}

@media only screen and (max-width : 550px) {
    #answer-container {
        grid-template-columns: 1fr;
    }
}

